--- a/angular/src/app/app.component.scss
+++ b/angular/src/app/app.component.scss
@@ -43,3 +43,9 @@
     border-radius: 10px;
     color: white;
 }
+
+.failed-integrity {
+    color: orange;
+    font-size: 0.7em;
+    font-weight: 700;
+}
